# Rust

./: Cargo.toml  README.md  rust project.pptx
src/: camera.rs  main.rs  platform.rs  player.rs  ui.rs
