[package]
name = "jump-block-game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_hanabi = "0.5.3"
rand = "0.8.0"

[dependencies.bevy]
version = "0.9.1"
features = [
    # TODO 换成symphonia-mp3 https://github.com/bevyengine/bevy/issues/7552
    "mp3"
]